fix overflow on home page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -84,7 +84,7 @@ html,
 body {
   max-width: 100vw;
   height: 100vh;
-  overflow-x: hidden;
+  overflow: hidden;
   scroll-behavior: smooth;
 }
 
